Alteracaoes de cores e video na homepage

--- a/about.html
+++ b/about.html
@@ -6,11 +6,12 @@ permalink: /sobre/
 <style>
     .img{
         filter: drop-shadow(1px 1px 4px);
+        max-width: 100%;
     }
 
 
 </style>
-<br><br>
+
 <p>Em janeiro de 2015, em uma viagem para Cuiabá, os irmãos Fabrício e Pedro Festa aproveitaram para andar de patins com seus primos. Entusiasmados com a prática, resolveram adquirir patins para eles mesmos antes de voltarem para Umuarama.
 De volta a Capital da Amizade, os irmãos começaram a patinar em alguns lugares e aos poucos foram encontrando pessoas interessadas. Desta forma surgiu a ideia de organizar um grupo nas redes sociais e atrair novos amigos para a modalidade.
 O grupo denominado ‘Galera do Patins Umuarama’ já conta com mais de 50 participantes e vem crescendo a cada dia. Toni Marcos Conte, um dos integrantes, comenta que os patinadores participam de encontros em diferentes pontos da cidade, como praças e ruas.
